Add collapsible legend tray
- Move legend from SVG overlay to separate HTML tray on right side
- Add toggle button with vertical "Legend" label
- Legend tray starts hidden until chart is rendered
- Auto-expands when chart is created, collapsible via toggle
- Responsive design with smaller width on mobile

--- a/index.html
+++ b/index.html
@@ -85,6 +85,16 @@
     <div class="container">
       <div id="chart-area" class="chart">
       </div>
+      <div id="legend-tray" class="legend-tray collapsed hidden">
+        <button id="legend-toggle" class="legend-toggle" aria-label="Toggle legend">
+          <span class="toggle-icon">◀</span>
+          <span class="toggle-label">Legend</span>
+        </button>
+        <div class="legend-content">
+          <h3>Legend</h3>
+          <div id="legend-items"></div>
+        </div>
+      </div>
     </div>
   </div>
   <div class="footer">
