Add SVG export functionality with toolbar
- Add toolbar with export button below the form menu
- Export generates SVG with all labels visible at readable sizes
- Dynamically size canvas based on label lengths for readability
- Progressive font sizing: outer circles 200% down to inner at 125%
- Leaf labels at 11px, legend at 22px
- Legend positioned 100px to right of diagram

--- a/index.html
+++ b/index.html
@@ -81,6 +81,20 @@
     </div>
   </div>
 
+  <div id="toolbar" class="toolbar hidden">
+    <div class="container">
+      <div class="toolbar-spacer"></div>
+      <button id="export-button" class="btn btn-export" title="Export as SVG">
+        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+          <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
+          <polyline points="7 10 12 15 17 10"/>
+          <line x1="12" y1="15" x2="12" y2="3"/>
+        </svg>
+        Export
+      </button>
+    </div>
+  </div>
+
   <div class="main">
     <div class="container">
       <div id="chart-area" class="chart">
