Added a favicon for the page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8">
 
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Circle Packer - Converts CSV files tro circle packing diagrams</title>
+  <link rel="icon" type="image/svg+xml" href="favicon.svg">
+  <title>Circle Packer - Converts CSV files to circle packing diagrams</title>
   <meta name="description" content="A simple use of d3.js Circle Packing diagrams to visual data provided in CSV">
   <link rel="stylesheet" href="circlepacker.css">
 
